...
                    onClick = onCreateEventClick,
                    containerColor = Color(0xFFDEFA5F),
                    shape = CircleShape,
                ) {
                    Icon(
                        imageVector = Icons.Rounded.Add,
                        contentDescription = "Add Alarm",
                        tint = Color.Black,
                        modifier = Modifier.size(32.dp),
                    )
                }
            },
            floatingActionButtonPosition = androidx.compose.material3.FabPosition.End,
...
